--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="v-align">
                             <div class="inner">
                                 <div class="intro-text">
-                                    <h1>I'm Praveen P</h1>
+                                    <h1>I'm Praveen</h1>
                                     <br />
                                     <p>"QWERTY - The Real Key(s) To Happiness"</p>
                                     <div class="intro-btns">
